--- a/StudentHub/templates/student_detail.html
+++ b/StudentHub/templates/student_detail.html
@@ -5,21 +5,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Detail</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #8EC5FC;
+      background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+      background-repeat: no-repeat;
+      background-size: 100% 900px;
+    }
+
+    .navbar {
+      background-color: #0093E9;
+      background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    }
+
+    .card-header {
+      background-color: #c8d080;
+      color: #000000;
+    }
+
+    .list-group-item {
+      display: flex;
+      justify-content: space-between;
+    }
+  </style>
 </head>
-
-<style>
-  body {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    background-repeat: no-repeat;
-    background-size: 100% 900px;
-  }
-
-  .navbar {
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-  }
-</style>
 
 <body>
 
@@ -49,22 +60,22 @@
   <center>
     <div class="card mt-5" style="width: 18rem;">
       <div class="card-header fw-bolder">
-        Student Details
+        STUDENT DETAILS
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"><b>Name:</b> {{data.student_name}}</li>
-        <li class="list-group-item"><b>Category:</b> {{data.category_name}}</li>
-        <li class="list-group-item"><b>Place:</b> {{data.place}}</li>
-        <li class="list-group-item"><b>Mobile:</b> {{data.mobile_number}}</li>
+        <li class="list-group-item"><span><b>Name:</b></span> <span>{{data.student_name}}</span></li>
+        <li class="list-group-item"><span><b>Category:</b></span> <span>{{data.category_name}}</span></li>
+        <li class="list-group-item"><span><b>Place:</b></span> <span>{{data.place}}</span></li>
+        <li class="list-group-item"><span><b>Mobile:</b></span> <span>{{data.mobile_number}}</span></li>
+        <li class="list-group-item"><span><b>Email:</b></span> <span>{{data.email}}</span></li>
+        <li class="list-group-item"><span><b>Qualification:</b></span> <span>{{data.qualification}}</span></li>
       </ul>
     </div>
   </center>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
