--- a/StudentHub/templates/index.html
+++ b/StudentHub/templates/index.html
@@ -55,6 +55,18 @@
     </div>
   </nav>
 
+  {% if messages %}
+    {% for m in messages %}
+    <div class="d-flex justify-content-center mt-5">
+        <div class="alert alert-warning alert-dismissible fade show w-40" role="alert">
+            <strong>{{ m }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+
+
   <div class="container">
     <div class="d-flex my-5 ">
 
