--- a/StudentHub/templates/stu_form.html
+++ b/StudentHub/templates/stu_form.html
@@ -49,6 +49,18 @@
     </div>
   </nav>
 
+  {% if messages %}
+  {% for m in messages %}
+  <div class="d-flex justify-content-center mt-5">
+      <div class="alert alert-warning alert-dismissible fade show w-40" role="alert">
+          <strong>{{ m }}</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+  </div>
+  {% endfor %}
+  {% endif %}
+
+
   <div class="container">
 
     <div class="d-flex mb-3 mt-3">
@@ -67,5 +79,5 @@
   </div>
 
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
