--- a/StudentHub/templates/student_edit.html
+++ b/StudentHub/templates/student_edit.html
@@ -7,21 +7,49 @@
   <title>Edit Student</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #8EC5FC;
+      background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+      background-repeat: no-repeat;
+      background-size: 100% 900px;
+    }
+
+    .navbar {
+      background-color: #0093E9;
+      background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    }
+
+    h2 {
+      color: #333;
+    }
+
+    form {
+      max-width: 500px;
+      margin: auto;
+    }
+
+    .btn-primary {
+      background-color: #0093E9;
+      border-color: #0093E9;
+    }
+
+    .btn-primary:hover {
+      background-color: #007bb5;
+      border-color: #007bb5;
+    }
+
+    .btn-secondary {
+      background-color: #6c757d;
+      border-color: #6c757d;
+    }
+
+    .btn-secondary:hover {
+      background-color: #5a6268;
+      border-color: #5a6268;
+    }
+  </style>
 </head>
-
-<style>
-  body {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    background-repeat: no-repeat;
-    background-size: 100% 900px;
-  }
-
-  .navbar {
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-  }
-</style>
 
 <body>
 
@@ -51,39 +79,39 @@
 
   <div class="container mt-5">
 
-    <div class="d-flex mb-5">
+    <div class=" mb-4 text-center">
       <h2>Edit Student</h2>
     </div>
 
     <form action="" method="post" class="mb-3">
       {% csrf_token %}
       {{ form.non_field_errors }}
-      <div class="mb-3 w-50">
+      <div class="mb-3">
         {{ form.student_name.label_tag }}
         {{ form.student_name }}
         {{ form.student_name.errors }}
       </div>
-      <div class="mb-3 w-50">
+      <div class="mb-3">
         {{ form.category_name.label_tag }}
         {{ form.category_name }}
         {{ form.category_name.errors }}
       </div>
-      <div class="mb-3 w-50">
+      <div class="mb-3">
         {{ form.mobile_number.label_tag }}
         {{ form.mobile_number }}
         {{ form.mobile_number.errors }}
       </div>
-      <div class="mb-3 w-50">
+      <div class="mb-3">
         {{ form.place.label_tag }}
         {{ form.place }}
         {{ form.place.errors }}
       </div>
-      <div class="mb-3 w-50">
+      <div class="mb-3">
         {{ form.email.label_tag }}
         {{ form.email }}
         {{ form.email.errors }}
       </div>
-      <div class="mb-3 w-50">
+      <div class="mb-3">
         {{ form.qualification.label_tag }}
         {{ form.qualification }}
         {{ form.qualification.errors }}
