--- a/StudentHub/templates/index.html
+++ b/StudentHub/templates/index.html
@@ -8,7 +8,6 @@
   <title>Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 
 <style>
@@ -27,7 +26,11 @@
   td {
     border: 1px solid black;
     text-align: center;
-    /* Center align text within table cells */
+  }
+
+  .table-custom {
+    width: 80%;
+    margin: 0 auto;
   }
 
   /* Custom Button Styles */
@@ -192,10 +195,8 @@
   {% endfor %}
   {% endif %}
 
-
   <div class="container">
-    <div class="d-flex my-5 ">
-
+    <div class="d-flex my-4">
       <form action="" method="post">
         {% csrf_token %}
         <div class="mb-3">
@@ -204,42 +205,34 @@
         </div>
         <button type="submit" class="btn btn-custom fw-bolder">Add Category</button>
       </form>
-
     </div>
 
-    <div class="row my-5">
+    <div class="row my-3">
       <div class="col-3 my-3">
-
         <form action="" method="post">
           {% csrf_token %}
           <button type="submit" class="btn btn-primary-custom w-100 fw-bolder" name="category" value="all">All</button>
         </form>
-
       </div>
 
       {% for cat in categories %}
       <div class="col-3 my-3">
-
         <form action="" method="post">
           {% csrf_token %}
           <button type="submit" class="btn btn-primary-custom w-100 fw-bolder" name="category"
             value="{{cat.id}}">{{cat.category_name}}</button>
         </form>
-
       </div>
       {% endfor %}
-
     </div>
 
     <div>
-      <table class="table border border-secondary">
+      <table class="table border border-secondary table-custom">
         <thead>
           <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Category</th>
-            <th>Phone</th>
-            <th>Place</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -249,8 +242,6 @@
             <td>{{stu.id}}</td>
             <td>{{stu.student_name}}</td>
             <td class="w-25">{{stu.category_name.category_name}}</td>
-            <td> {{stu.mobile_number}}</td>
-            <td>{{stu.place}}</td>
             <td>
               <a href="{% url 'student-detail' stu.id %}" class="text-decoration-none text-primary fw-bolder mx-2"><i
                   class="fas fa-eye fa-icon text-primary"></i></a>
