Added fields in student form and html

--- a/StudentHub/templates/student_detail.html
+++ b/StudentHub/templates/student_detail.html
@@ -65,6 +65,8 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item"><span><b>Name:</b></span> <span>{{data.student_name}}</span></li>
         <li class="list-group-item"><span><b>Category:</b></span> <span>{{data.category_name}}</span></li>
+        <li class="list-group-item"><span><b>Gender:</b></span> <span>{{data.gender}}</span></li>
+        <li class="list-group-item"><span><b>Age:</b></span> <span>{{data.age}}</span></li>
         <li class="list-group-item"><span><b>Place:</b></span> <span>{{data.place}}</span></li>
         <li class="list-group-item"><span><b>Mobile:</b></span> <span>{{data.mobile_number}}</span></li>
         <li class="list-group-item"><span><b>Email:</b></span> <span>{{data.email}}</span></li>
