--- a/StudentHub/templates/student_edit.html
+++ b/StudentHub/templates/student_edit.html
@@ -97,6 +97,16 @@
         {{ form.category_name.errors }}
       </div>
       <div class="mb-3">
+        {{ form.gender.label_tag }}
+        {{ form.gender }}
+        {{ form.gender.errors }}
+      </div>
+      <div class="mb-3">
+        {{ form.age.label_tag }}
+        {{ form.age }}
+        {{ form.age.errors }}
+      </div>
+      <div class="mb-3">
         {{ form.mobile_number.label_tag }}
         {{ form.mobile_number }}
         {{ form.mobile_number.errors }}
