Created a view for category list,edit,delete

--- a/StudentHub/templates/cat_form.html
+++ b/StudentHub/templates/cat_form.html
@@ -43,19 +43,22 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'student-add' %}">+ Student</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'category-list' %}">Category List</a>
+          </li>
         </ul>
-
       </div>
     </div>
   </nav>
 
+
   {% if messages %}
   {% for m in messages %}
   <div class="d-flex justify-content-center mt-5">
-      <div class="alert alert-warning alert-dismissible fade show w-40" role="alert">
-          <strong>{{ m }}</strong>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
+    <div class="alert alert-warning alert-dismissible fade show w-40" role="alert">
+      <strong>{{ m }}</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
   </div>
   {% endfor %}
   {% endif %}
@@ -82,5 +85,7 @@
   </div>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
