--- a/StudentHub/templates/index.html
+++ b/StudentHub/templates/index.html
@@ -179,6 +179,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'student-add' %}">+ Student</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'category-list' %}">Category List</a>
+          </li>
         </ul>
       </div>
     </div>
