--- a/StudentHub/templates/student_detail.html
+++ b/StudentHub/templates/student_detail.html
@@ -52,10 +52,14 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'student-add' %}">+ Student</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'category-list' %}">Category List</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
+
 
   <center>
     <div class="card mt-5" style="width: 18rem;">
