--- a/StudentHub/templates/student_edit.html
+++ b/StudentHub/templates/student_edit.html
@@ -71,11 +71,14 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'student-add' %}">+ Student</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'category-list' %}">Category List</a>
+          </li>
         </ul>
-
       </div>
     </div>
   </nav>
+
 
   <div class="container mt-5">
 
