--- a/StudentHub/templates/category_list.html
+++ b/StudentHub/templates/category_list.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -6,32 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/category_list.css' %}">
 </head>
-
-<style>
-    .navbar {
-        background-color: #0093E9;
-        background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    }
-
-    body {
-        background-color: #85FFBD;
-        background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
-    }
-
-    /* Custom style to decrease width of the table */
-    .table-container {
-        max-width: 600px;
-        /* Set your desired width */
-        margin: auto;
-        /* Center the table */
-    }
-
-    .table {
-        width: 100%;
-        /* Ensure table fits within the container */
-    }
-</style>
 
 <body>
 
@@ -91,8 +68,10 @@
             </tbody>
         </table>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/252a556f38.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
