--- a/StudentHub/templates/student_detail.html
+++ b/StudentHub/templates/student_detail.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -7,29 +8,7 @@
   <title>Student Detail</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <style>
-    body {
-      background-color: #8EC5FC;
-      background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-      background-repeat: no-repeat;
-      background-size: 100% 900px;
-    }
-
-    .navbar {
-      background-color: #0093E9;
-      background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    }
-
-    .card-header {
-      background-color: #c8d080;
-      color: #000000;
-    }
-
-    .list-group-item {
-      display: flex;
-      justify-content: space-between;
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'css/student_detail.css' %}">
 </head>
 
 <body>
@@ -82,6 +61,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
