--- a/StudentHub/templates/student_edit.html
+++ b/StudentHub/templates/student_edit.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -7,48 +8,7 @@
   <title>Edit Student</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <style>
-    body {
-      background-color: #8EC5FC;
-      background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-      background-repeat: no-repeat;
-      background-size: 100% 900px;
-    }
-
-    .navbar {
-      background-color: #0093E9;
-      background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    }
-
-    h2 {
-      color: #333;
-    }
-
-    form {
-      max-width: 500px;
-      margin: auto;
-    }
-
-    .btn-primary {
-      background-color: #0093E9;
-      border-color: #0093E9;
-    }
-
-    .btn-primary:hover {
-      background-color: #007bb5;
-      border-color: #007bb5;
-    }
-
-    .btn-secondary {
-      background-color: #6c757d;
-      border-color: #6c757d;
-    }
-
-    .btn-secondary:hover {
-      background-color: #5a6268;
-      border-color: #5a6268;
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'css/student_edit.css' %}">
 </head>
 
 <body>
@@ -78,7 +38,6 @@
       </div>
     </div>
   </nav>
-
 
   <div class="container mt-5">
 
